--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "prettier": "^1.19.1",
     "react": "^16.12.0",
     "react-dom": "^16.12.0",
+    "react-sticky": "^6.0.3",
     "umi": "^3.2.10",
     "yorkie": "^2.0.0"
   }
